--- a/Web/Pages/Shared/_Layout.cshtml
+++ b/Web/Pages/Shared/_Layout.cshtml
@@ -10,15 +10,20 @@
     <!-- Feeds and Sitemap -->
     <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml" />
     <link rel="alternate" type="application/rss+xml" title="Latest Tips" href="/feed.rss" />
-    
-    <!-- Fonts and External CSS -->
+      <!-- Fonts and External CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@800&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link id="prism-theme" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css" />
     
-    <!-- Bundled and minified site CSS -->
-    <link rel="stylesheet" href="~/css/bundle.min.css" asp-append-version="true" />
+    <!-- Site CSS -->
+    <environment exclude="Development">
+        <link rel="stylesheet" href="~/css/bundle.min.css" asp-append-version="true" />
+    </environment>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/layout.css" asp-append-version="true" />
+    </environment>
     <link rel="stylesheet" href="~/Web.styles.css" asp-append-version="true" />
     @await RenderSectionAsync("Styles", required: false)
 
@@ -111,8 +116,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-bash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-yaml.min.js"></script>
     
-    <!-- Bundled and minified site scripts -->
-    <script src="~/js/bundle.min.js" asp-append-version="true"></script>
+    <!-- Site scripts -->
+    <environment exclude="Development">
+        <script src="~/js/bundle.min.js" asp-append-version="true"></script>
+    </environment>
+    <environment include="Development">
+        <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/analytics.js" asp-append-version="true"></script>
+        <script src="~/js/theme-switcher.js" asp-append-version="true"></script>
+    </environment>
     <script>
         // Fix for code highlighting in theme changes
         document.addEventListener('DOMContentLoaded', function() {
