--- a/Web/Pages/_ViewImports.cshtml
+++ b/Web/Pages/_ViewImports.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Web
+@using Web.Pages
 @using Shared
 @namespace Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers.Cache
